contact us page

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -392,3 +392,17 @@ h3 a
       cursor: pointer
 .dialogtitle
   background-color: #FFCC00
+
+/* Validation Error Messages*/
+span
+  .errors
+    color: red
+
+fieldset
+  #errors
+    ul
+      li
+        color: red
+    legend
+      color: red
+/* End of Validation Error Messages*/
