--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -1,2 +1,3 @@
 = render :partial => "layouts/header" #NEW_LAYOUT
+= render :partial => "layouts/flash" #NEW_LAYOUT
 = render :partial => "layouts/footer" #NEW_LAYOUT
