--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -406,3 +406,32 @@ fieldset
     legend
       color: red
 /* End of Validation Error Messages*/
+
+/* flash design*/
+.flashtitle
+  min-height: 30px
+  display: block
+
+.flasherrortitlecontent
+  background-color: #ffeae6
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #f2d2cc
+  
+.flashwarningtitlecontent
+  background-color: #F4FFDB
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #CCF2CD
+
+.flashnoticetitlecontent
+  background-color: #D7FFCF
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #C6EDBE
+  
+.flashtitleborder
+  padding: 10px
+  text-align: center
+  font-weight: bold
+  /* End of flash design*/
