--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -1,11 +1,16 @@
-.form
-  = form_for :user, :url => users_recover_password_path, :builder => FormHelper::BHLFormBuilder do |f|
-    = I18n.t :forget_password_message
-    %ul
-      %li
-        = f.label :email
-      %li
-        = f.text_field :email
+.col-md-8.column
+  %div
     %fieldset
-      = f.submit I18n.t('submit_buton'), :class => "btn"
-      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
+      %legend
+        = I18n.t(:forget_password_message)
+      .form-horizontal
+        = form_for :user, :url => users_recover_password_path, :builder => FormHelper::BHLFormBuilder do |f|
+          .form-group
+            = f.label :email, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :email, { :class => "required form-control" }
+          .form-group
+            .col-sm-2
+            .col-sm-10
+              = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
+              = f.submit I18n.t('clear_button'), :type => "reset", :class => "btn btn-default"
