--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -14,7 +14,7 @@
             .form-group
               = f.label :email, raw(t('email')), :class => 'col-sm-2 control-label'
               .col-sm-10
-                = f.text_field :email, { :class => "required form-control" }
+                = f.text_field :email, {:class => "required form-control" }
             .form-group
               = f.label :subject, raw(t('message_subject')), :class => 'required col-sm-2 control-label'
               .col-sm-10
@@ -32,4 +32,4 @@
                 %br
                   %center
                     = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
-                    = f.submit I18n.t('clear_button'), :class => "btn btn-defualt"
+                    = f.submit I18n.t('clear_button'), :type => "reset", :class => "btn btn-defualt"
