--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,44 +1,55 @@
-.form
-  = form_for @user, :builder => FormHelper::BHLFormBuilder do |f|
-    = validation_errors_for(@user)
-    %ul
-      %li
-        = f.label :username, raw(t('username')), :class => 'required'
-      %li
-        = f.text_field :username, { :maxlength => 32 }
-      %li
-        = f.label :entered_password, raw(t('password')), :class => 'required'
-      %li
-        = f.password_field :entered_password, { :maxlength => 32 }
-      %li
-        = f.label :confirm_password, raw(t('confirm_password')), :class => 'required'
-      %li
-        = f.password_field :entered_password_confirmation, { :maxlength => 32 }
-      %li
-        = f.label :email, raw(t('email')), :class => 'required'
-      %li
-        = f.text_field :email, { :maxlength => 100 }
-      %li
-        = f.label :confirm_email, raw(t('confirm_email')), :class => 'required'
-      %li
-        = f.text_field :email_confirmation, { :maxlength => 100 }
-      %li
-        = f.label :real_name, raw(t('real_name')), :class => 'required'
-      %li
-        = f.text_field :real_name, { :maxlength => 150 }
-      - if @verify_captcha
-        %li
-          = f.label :recaptcha, raw(t('recaptcha')), :class => 'required'
-        %li
-          = recaptcha_tags(display: {theme: 'clean'})
-      %li
-        - if(!(@user.photo_name.blank?))
-          - @thumb = @user.photo_name_url(:thumb)
-          = image_tag("#{@thumb}", :width => 150, :border => 0 )
-          = check_box_tag "delete_photo"
-          = I18n.t(:delete_photo)
-      %li
-        = f.file_field :photo_name
+.col-md-8.column
+  %div
     %fieldset
-      = f.submit I18n.t('submit_buton'), :class => "btn"
-      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
+      %legend
+        = @page_title
+      .form-horizontal
+        = validation_errors_for(@user)
+        = form_for @user, :builder => FormHelper::BHLFormBuilder do |f|
+          .form-group
+            = f.label :username, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :username, { :class => "required form-control" }
+          .form-group
+            = f.label :entered_password, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.password_field :entered_password, { :type => "password",:class => "required form-control" }
+          .form-group
+            = f.label :confirm_password, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.password_field :entered_password_confirmation, { :type => "password",:class => "required form-control" }
+          .form-group
+            = f.label :email, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :email, { :class => "required form-control" }
+          .form-group
+            = f.label :confirm_email, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :email_confirmation, { :class => "required form-control" }
+          .form-group
+            = f.label :real_name, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :real_name, { :class => "required form-control" }
+          - if @verify_captcha
+            .form-group
+              = f.label :recaptcha, raw(t('recaptcha')), :class => 'required col-sm-2 control-label'
+              .col-sm-10
+                = recaptcha_tags(display: {theme: 'clean'})
+          - if(!(@user.photo_name.blank?))
+            - @thumb = @user.photo_name_url(:thumb)
+            .form-group
+              = f.label I18n.t('profile_photo'), :class => 'col-sm-2 control-label'
+              .col-sm-10
+                = image_tag("#{@thumb}", :width => 150, :border => 0 )
+                = check_box_tag "delete_photo"
+                = I18n.t(:delete_photo)
+          .form-group
+            = f.label I18n.t('upload_photo'), :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.file_field :photo_name, { :type => "file",:class => "btn btn-default"}
+              %p.help-block #{I18n.t(:max_photo_size)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}
+          .form-group
+            .col-sm-2
+            .col-sm-10
+              = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
+              = f.submit I18n.t('clear_button'), :class => "btn btn-default", :type => "reset"
