--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -1,19 +1,26 @@
-.form
-  = form_for :user, :url => users_validate_path, :builder => FormHelper::BHLFormBuilder do |f|
-    - unless params[:return_to].blank?
-      = f.hidden_field :return_to, :value => params[:return_to]
-    %ul
-      %li
-        = f.label :username, :class => 'required'
-      %li
-        = f.text_field :username
-      %li
-        = f.label :password, :class => 'required'
-      %li
-        = f.password_field :password, :maxlength => 16
-      %li
-        %br
-        = link_to I18n.t(:forgot_password_link), users_forgot_password_path
+.col-md-8.column
+  %div
     %fieldset
-      = f.submit I18n.t('submit_buton'), :class => "btn"
-      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
+      %legend
+        = I18n.t(:header_login)
+      .form-horizontal
+        = form_for :user, :url => users_validate_path, :builder => FormHelper::BHLFormBuilder do |f|
+          - unless params[:return_to].blank?
+            = f.hidden_field :return_to, :value => params[:return_to]
+          .form-group
+            = f.label :username, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :username, { :class => "required form-control" }
+          .form-group
+            = f.label :password, :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.password_field :password, { :type => "password",:class => "required form-control" }
+          .form-group
+            .col-sm-2
+            .col-sm-10
+              = f.submit I18n.t('submit_buton'), :class => "btn btn-default"
+        %hr
+          %div
+            = link_to I18n.t(:forgot_password_link), users_forgot_password_path
+            \/ #{I18n.t(:not_member)}
+            = link_to I18n.t(:header_signup), new_user_path
