--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -435,3 +435,9 @@ fieldset
   text-align: center
   font-weight: bold
   /* End of flash design*/
+.visible_error_msg
+  display: block
+  color: red
+.invisible_error_msg
+  display: none
+  
