--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -6,7 +6,7 @@
       .form-horizontal
         = form_for :user, :url => users_recover_password_path, :builder => FormHelper::BHLFormBuilder do |f|
           .form-group
-            = f.label :email, :class => 'col-sm-2 control-label'
+            = f.label I18n.t(:email), :class => 'col-sm-2 control-label'
             .col-sm-10
               = f.text_field :email, { :class => "required form-control" }
           .form-group
