--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -8,11 +8,11 @@
           - unless params[:return_to].blank?
             = f.hidden_field :return_to, :value => params[:return_to]
           .form-group
-            = f.label :username, :class => 'col-sm-2 control-label'
+            = f.label I18n.t(:username), :class => 'col-sm-2 control-label'
             .col-sm-10
               = f.text_field :username, { :class => "required form-control" }
           .form-group
-            = f.label :password, :class => 'col-sm-2 control-label'
+            = f.label I18n.t(:password), :class => 'col-sm-2 control-label'
             .col-sm-10
               = f.password_field :password, { :type => "password",:class => "required form-control" }
           .form-group
