validate uploaded image size

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,15 +1,27 @@
 :javascript
   function check_image_size() {
+  var is_file_valid = true;
   if ($('#filefield')[0].files[0] != null){
-  var size = $('#filefield')[0].files[0].size;
-    if (size > #{UPLOADED_PHOTO_MAX_SIZE * 1000 * 1000}){
-      $('#error_message').removeClass("invisible_error_msg");
-      $('#error_message').addClass("visible_error_msg");
-      return false;
+    var ext = $('#filefield').val().split('.').pop().toLowerCase();
+    var size = $('#filefield')[0].files[0].size;
+    if($.inArray(ext, ['gif','png','jpg','jpeg', 'bmp']) == -1) {
+      $('#photo_ext_error_message').removeClass("invisible_error_msg");
+      $('#photo_ext_error_message').addClass("visible_error_msg");
+      $('#photo_size_error_message').removeClass("visible_error_msg");
+      $('#photo_size_error_message').addClass("invisible_error_msg");
+      is_file_valid = false;
+    }
+    else{
+      if (size > #{UPLOADED_PHOTO_MAX_SIZE * 1000 * 1000}){
+        $('#photo_ext_error_message').removeClass("visible_error_msg");
+        $('#photo_ext_error_message').addClass("invisible_error_msg");
+        $('#photo_size_error_message').removeClass("invisible_error_msg");
+        $('#photo_size_error_message').addClass("visible_error_msg");
+        is_file_valid = false;
       }
-      else
-        return true;
-        }
+    }
+    }
+    return is_file_valid;
   }
   
 .col-md-8.column
@@ -60,8 +72,10 @@
           .form-group
             = f.label I18n.t('upload_photo'), :class => 'col-sm-2 control-label'
             .col-sm-10
-              .invisible_error_msg#error_message
+              .invisible_error_msg#photo_size_error_message
                 = "#{I18n.t(:upload_photo_max_size_error)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}"
+              .invisible_error_msg#photo_ext_error_message
+                = "#{I18n.t(:upload_photo_ext_error)}"
               = f.file_field :photo_name, {:id => "filefield", :type => "file",:class => "btn btn-default"}
               %p.help-block #{I18n.t(:max_photo_size)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}
           .form-group
