--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,11 @@
 :javascript
+  $(document).ready(function() {
+    $( "#change_password" ).click(function() {
+      $( "#change_password").toggle();
+      $( "#change_password_block").toggle();
+  });
+  });
+    
   function check_image_size() {
   var is_file_valid = true;
   if ($('#filefield')[0].files[0] != null){
@@ -36,14 +43,30 @@
             = f.label I18n.t(:username), :class => 'col-sm-2 control-label'
             .col-sm-10
               = f.text_field :username, { :class => "required form-control" }
-          .form-group
-            = f.label I18n.t(:password) , :class => 'col-sm-2 control-label'
-            .col-sm-10
-              = f.password_field :entered_password, { :type => "password",:class => "required form-control" }
-          .form-group
-            = f.label I18n.t(:password_confirmation) , :class => 'col-sm-2 control-label'
-            .col-sm-10
-              = f.password_field :entered_password_confirmation, { :type => "password",:class => "required form-control" }
+          - if (@action == "signup")
+            .form-group
+              = f.label I18n.t(:password) , :class => 'col-sm-2 control-label'
+              .col-sm-10
+                = f.password_field :entered_password, { :type => "password",:class => "required form-control" }
+            .form-group
+              = f.label I18n.t(:password_confirmation) , :class => 'col-sm-2 control-label'
+              .col-sm-10
+                = f.password_field :entered_password_confirmation, { :type => "password",:class => "required form-control" }
+          - if (@action == "modify")
+            %a.btn{:style=> "cursor:pointer;", :id => "change_password"} #{I18n.t(:change_password)}
+            %div{:style=> "cursor:pointer;display:none;", :id => "change_password_block"}
+              .form-group
+                = f.label I18n.t(:old_password) , :class => 'col-sm-2 control-label'
+                .col-sm-10
+                  = f.password_field :old_password, { :type => "password",:class => "required form-control" }
+              .form-group
+                = f.label I18n.t(:new_password) , :class => 'col-sm-2 control-label'
+                .col-sm-10
+                  = f.password_field :entered_password, { :type => "password",:class => "required form-control" }
+              .form-group
+                = f.label I18n.t(:new_password_confirmation) , :class => 'col-sm-2 control-label'
+                .col-sm-10
+                  = f.password_field :entered_password_confirmation, { :type => "password",:class => "required form-control" }
           .form-group
             = f.label I18n.t(:email) , :class => 'col-sm-2 control-label'
             .col-sm-10
