--- a/app/views/users/_listresult.html.haml
+++ b/app/views/users/_listresult.html.haml
@@ -3,33 +3,25 @@
     var r = confirm("#{I18n.t(:remove_book_from_history_confirm)}");
     return r;
   }
-.clear
-.thumb
-  = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) , 
-    {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => :read}
-.newscontent
-  .sidelinks
-    = link_to image_tag("/images_#{I18n.locale}/read.png", :alt => "read", :title => "read") , 
-        {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => :read}
-    = link_to image_tag("/images_#{I18n.locale}/learn.png", :alt => "details", :title => "details") , 
-        {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => "brief"}
-    = link_to image_tag("/images_#{I18n.locale}/trash_delete.png", :alt => "delete", :title => "delete") , 
-        {:controller => :users, :action => :remove_book_history, :volume_id => @vol[:id],
-         :user_id => @ubh_vol[:user_id],:id => @ubh_vol[:user_id], :page => @page},
-         :onclick => "return confirmDelete()"
-  %h4
-    = link_to @title.html_safe , 
-        {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => "brief"}
-  .description
-    - if(@doc['author'] != nil)
-      = render :partial => "books/bookauthors"
-    - if(@doc['published_at'] != nil)
-      %br
-      = render :partial => "books/bookpublishedat"
-    - if(@doc['name'] != nil)
-      %br
-      = render :partial => "books/booknames"
-  %br
-  .visitedtime
-    = "#{I18n.t(:last_visited_date)}: #{@ubh_vol.last_visited_date}"
-.clear
+.col-md-8.column.browse
+  .row.clearfix
+    .col-xs-2.column  
+      = link_to image_tag("/#{@thumb}", :width => 109, :border => 0), 
+          {:controller => :books, :action => :show, :id => @vol[:job_id]}
+    .col-md-6.column
+      %h4
+        = link_to @title.html_safe , 
+        {:controller => :books, :action => :show, :id => @vol[:job_id]}
+      %p.small
+        - if(@doc['author'] != nil)
+          = render :partial => "books/bookauthors"
+        - if(@doc['subject'] != nil)
+          = render :partial => "books/booksubjects"
+        - if(@doc['name'] != nil)
+          - @names = fillResponseArrays(@doc, @highlight, 'name', @id)
+          = render :partial => "books/booknames"
+      %h4
+        = "#{I18n.t(:last_visited_date)}: #{@ubh_vol.last_visited_date}"
+    .col-xs-4.column.controls
+      =render :partial => "users/sidelinks"
+  %hr.clearfix.col-lg-12
